# web-pilot

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.claude/skills/webpilot/: SKILL.md
.github/workflows/: ci.yml
crates/webpilot/: Cargo.toml
crates/webpilot-cli/: Cargo.toml
crates/webpilot-cli/src/: cdp.rs  cli.rs  headless.rs  host.rs  main.rs  output.rs  session.rs  stitch.rs  timeouts.rs
crates/webpilot-cli/src/commands/: action.rs  capture.rs  console.rs  context.rs  cookies.rs  device.rs  diff.rs  dom.rs  eval.rs  fetch.rs  find.rs  frames.rs  install.rs  ipc_helper.rs  mod.rs  network.rs  policy.rs  profile.rs  record.rs  session.rs  status.rs  tabs.rs  wait.rs
crates/webpilot-cli/src/headless/: action.rs  capture.rs  console.rs  context.rs  cookies.rs  device.rs  dom.rs  eval.rs  fetch.rs  find.rs  frames.rs  mod.rs  network.rs  policy.rs  profile.rs  record.rs  session.rs  status.rs  tabs.rs  wait.rs
crates/webpilot/src/: ipc.rs  lib.rs  native_messaging.rs  protocol.rs  screenshot.rs  types.rs
extension/: manifest.json
extension/background/: service-worker.js
extension/content/: bridge.js
extension/popup/: popup.html  popup.js
extension/sidepanel/: panel.html  panel.js
scripts/: install-skill.sh  install.sh  uninstall.sh
