[workspace]
resolver = "2"
members = ["crates/webpilot", "crates/webpilot-cli"]

[workspace.package]
version = "1.0.0"
edition = "2024"
rust-version = "1.94.0"
license = "MIT"

[workspace.dependencies]
# Async
tokio = { version = "1", features = ["full"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Image (screenshot processing in host)
image = "0.25"
fast_image_resize = "5"
base64 = "0.22"

# CLI
clap = { version = "4", features = ["derive"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error
anyhow = "1"
thiserror = "2"
similar = "2"

# WebSocket (CDP client)
tokio-tungstenite = "0.29"
futures-util = "0.3"
