[package]
name = "webpilot"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
description = "Browser control tool for AI agents — shared library"

[dependencies]
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
base64.workspace = true
image.workspace = true
fast_image_resize.workspace = true
thiserror.workspace = true
tracing.workspace = true
